outline_error.txt
    Checking deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0432]: unresolved import `super::ffi::setupCodeMirror`
 --> apps\web\src\editor\hook.rs:7:18
  |
7 | use super::ffi::{setupCodeMirror, applyRemoteContent, applyRemoteOp, getEditorContent};
  |                  ^^^^^^^^^^^^^^^ no `setupCodeMirror` in `editor::ffi`

error[E0433]: failed to resolve: could not find `outline` in `components`
  --> apps\web\src\editor\mod.rs:73:41
   |
73 |                     <crate::components::outline::Outline
   |                                         ^^^^^^^ could not find `outline` in `components`

warning: unused import: `leptos::prelude::*`
 --> apps\web\src\i18n.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: the method `get_value` exists for struct `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>`, but its trait bounds were not satisfied
  --> apps\web\src\editor\mod.rs:38:38
   |
38 |         if let Some(view) = view_ref.get_value() {
   |                                      ^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
  ::: C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\owner\stored_value.rs:25:1
   |
25 | pub struct StoredValue<T, S = SyncStorage> {
   | ------------------------------------------ doesn't satisfy `_: GetValue`, `_: ReadValue` or `_: WithValue`
   |
  ::: C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\owner\storage.rs:65:1
   |
65 | pub struct SyncStorage;
   | ---------------------- doesn't satisfy `_: Storage<ArcStoredValue<Option<JsValue>>>`
   |
   = note: the following trait bounds were not satisfied:
           `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: WithValue`
           which is required by `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: leptos::prelude::GetValue`
           `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: ReadValue`
           which is required by `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: leptos::prelude::GetValue`
           `SyncStorage: leptos::prelude::Storage<ArcStoredValue<std::option::Option<wasm_bindgen::JsValue>>>`
           which is required by `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: leptos::prelude::GetValue`

error[E0282]: type annotations needed
  --> apps\web\src\editor\mod.rs:43:5
   |
43 | /     view! {
44 | |         // Main container: Relative for positioning playback, 100% size
45 | |         <div class="relative w-full h-full flex flex-col overflow-hidden">
...  |
90 | |         </div>
91 | |     }
   | |_____^ cannot infer type
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*mut u8` cannot be sent between threads safely
   --> apps\web\src\editor\hook.rs:120:37
    |
120 |     let view_ref = StoredValue::new(None::<JsValue>);
    |                    ---------------- ^^^^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
    |                    |
    |                    required by a bound introduced by this call
    |
    = help: within `std::option::Option<wasm_bindgen::JsValue>`, the trait `std::marker::Send` is not implemented for `*mut u8`
note: required because it appears within the type `PhantomData<*mut u8>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `wasm_bindgen::JsValue`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wasm-bindgen-0.2.106\src\lib.rs:153:12
    |
153 | pub struct JsValue {
    |            ^^^^^^^
note: required because it appears within the type `std::option::Option<wasm_bindgen::JsValue>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/option.rs:599:10
note: required by a bound in `leptos::prelude::StoredValue::<T>::new`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\owner\stored_value.rs:107:8
    |
107 |     T: Send + Sync + 'static,
    |        ^^^^ required by this bound in `StoredValue::<T>::new`
...
111 |     pub fn new(value: T) -> Self {
    |            --- required by a bound in this associated function

error[E0277]: `*mut u8` cannot be shared between threads safely
   --> apps\web\src\editor\hook.rs:120:37
    |
120 |     let view_ref = StoredValue::new(None::<JsValue>);
    |                    ---------------- ^^^^^^^^^^^^^^^ `*mut u8` cannot be shared between threads safely
    |                    |
    |                    required by a bound introduced by this call
    |
    = help: within `std::option::Option<wasm_bindgen::JsValue>`, the trait `std::marker::Sync` is not implemented for `*mut u8`
note: required because it appears within the type `PhantomData<*mut u8>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `wasm_bindgen::JsValue`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wasm-bindgen-0.2.106\src\lib.rs:153:12
    |
153 | pub struct JsValue {
    |            ^^^^^^^
note: required because it appears within the type `std::option::Option<wasm_bindgen::JsValue>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/option.rs:599:10
note: required by a bound in `leptos::prelude::StoredValue::<T>::new`
   --> C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\owner\stored_value.rs:107:15
    |
107 |     T: Send + Sync + 'static,
    |               ^^^^ required by this bound in `StoredValue::<T>::new`
...
111 |     pub fn new(value: T) -> Self {
    |            --- required by a bound in this associated function

error[E0599]: the method `set_value` exists for struct `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>`, but its trait bounds were not satisfied
   --> apps\web\src\editor\hook.rs:167:22
    |
167 |             view_ref.set_value(Some(view));
    |                      ^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
    |
   ::: C:\Users\QQ\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\reactive_graph-0.1.8\src\owner\stored_value.rs:25:1
    |
 25 | pub struct StoredValue<T, S = SyncStorage> {
    | ------------------------------------------ doesn't satisfy `_: SetValue` or `_: WriteValue`
    |
    = note: the following trait bounds were not satisfied:
            `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: WriteValue`
            which is required by `leptos::prelude::StoredValue<std::option::Option<wasm_bindgen::JsValue>>: leptos::prelude::SetValue`

Some errors have detailed explanations: E0277, E0282, E0432, E0433, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `deve_web` (bin "deve_web") generated 1 warning
error: could not compile `deve_web` (bin "deve_web") due to 7 previous errors; 1 warning emitted
